# numeric-comp-cource

diff/: CMakeLists.txt  main.cpp
diff/resources/: predator.xy  prey.xy
diff/src/: diff_euler.hpp
global-opt/: CMakeLists.txt  main.cpp
global-opt/src/: genetic.hpp  lipo.hpp  random_search.hpp
integration/: CMakeLists.txt  main.cpp
integration/src/: abscissa.hpp  legendre_gauss.hpp  newton_cotes.hpp  weights.hpp
irreg-int/: CMakeLists.txt  main.cpp
irreg-int/resources/: my_points_1.xyz  my_points_2.xyz
irreg-int/src/: barycentric_int.hpp  point.hpp  rb_int.hpp
linalg/src/: meson.build
linalg/src/linalg/: linalg.hh
linalg/src/test/: meson.build  test_all.cc  test_less.cc  test_where.cc
local-opt/: CMakeLists.txt  main.cpp
local-opt/src/: bisection.hpp  newton.hpp  utils.hpp
reg-int/: CMakeLists.txt  main.cpp
reg-int/src/: lagrange_int.hpp  linear_int.hpp
src/linalg/: linalg.hh  main.cc
src/test/: test_any.cc  test_sum.cc
