test_sum = executable(
  'test_sum',
  sources: ['test_sum.cc'],
  include_directories: src
)
test_less = executable(
  'test_less',
  sources: ['test_less.cc'],
  include_directories: src
)
test_all = executable(
  'test_all',
  sources: ['test_all.cc'],
  include_directories: src
)
test_any = executable(
  'test_any',
  sources: ['test_any.cc'],
  include_directories: src
)
test_where = executable(
  'test_where',
  sources: ['test_where.cc'],
  include_directories: src
)

test('test sum', test_sum)
test('test less', test_less)
test('test all', test_all)
test('test any', test_any)
test('test where', test_where)
